feat: slightly improve account import

--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -16,7 +16,7 @@
   "accounts": "Accounts",
   "actions": "Actions",
   "activate": "Protect",
-  "activate_hint": "Please arrange the words of the passphrase in the correct order. By doing so, you confirm that you have kept the passphrase safe. Keep in mind that you won't be able to control your account without the passphrase.",
+  "activate_hint": "Please arrange the words of the recovery phrase in the correct order. By doing so, you confirm that you have kept the recovery phrase safe. Keep in mind that you won't be able to control your account without the recovery phrase.",
   "activate_request_successful": "Successfully requested account protection. Your account will be protected in a few moments.",
   "activation_failed": "Protection failed: ",
   "activation_success": "Successfully requested protection. Your account will be protected in a few moments.",
@@ -85,7 +85,7 @@
   "click_for_changes": "Click here to see what has changed",
   "click_for_other_platforms": "Click here, if you want another platform",
   "click_here_for_help": "Click here to know more about it",
-  "click_to_copy_passphrase": "Click here to copy the passphrase into the clipboard",
+  "click_to_copy_recovery phrase": "Click here to copy the recovery phrase into the clipboard",
   "click_to_refresh": "Click to refresh",
   "click_words": "Click words in correct order",
   "close": "Close",
@@ -93,7 +93,7 @@
   "comma": "Comma",
   "comment": "Comment",
   "complete": "Complete",
-  "confirm_passphrase": "Confirm passphrase",
+  "confirm_recovery phrase": "Confirm recovery phrase",
   "confirmations": "Confirmations",
   "confirmed": "Confirmed",
   "console": "Console",
@@ -178,7 +178,7 @@
   "error_not_enough_funds": "Not enough funds.",
   "error_not_forging": "Account is not forging.",
   "error_not_specified": "__name__ not specified.",
-  "error_passphrase_required": "Passphrase is a required field.",
+  "error_recovery phrase_required": "Passphrase is a required field.",
   "error_post_only": "This request is only accepted using POST!",
   "error_public_key_already_announced": "Public key for this account has already been announced.",
   "error_public_key_announcement_no_recipient": "Public key announcement cannot be attached to transactions with no recipient.",
@@ -212,7 +212,7 @@
   "from": "From",
   "full_hash": "Full Hash",
   "generate": "Generate",
-  "generate_passphrase": "Generate Passphrase",
+  "generate_recovery phrase": "Generate Passphrase",
   "generate_qr": "Generate QR",
   "generation_signature": "Generation Signature",
   "generator": "Generator",
@@ -249,8 +249,8 @@
   "marketplace_quantity_change": "Marketplace Quantity Change",
   "marketplace_refund": "Marketplace Refund",
   "marketplace_removal": "Marketplace Removal",
-  "memorize_passphrase_help": "Please store this passphrase in a secure place. This passphrase is needed in order to access your Signum account. ",
-  "memorize_passphrase_help_addon": "If you lose the passphrase you won't be able to do any transactions, i.e. your coins are lost. The passphrase is not recoverable. Keep this passphrase secret. Everybody who knows the passphrase is de facto the owner of the account.",
+  "memorize_recovery phrase_help": "Please store this recovery phrase in a secure place. This recovery phrase is needed in order to access your Signum account. ",
+  "memorize_recovery phrase_help_addon": "If you lose the recovery phrase you won't be able to do any transactions, i.e. your coins are lost. The recovery phrase is not recoverable. Keep this recovery phrase secret. Everybody who knows the recovery phrase is de facto the owner of the account.",
   "message": "Message",
   "message_is_text": "Message is Text?",
   "messages": "Messages",
@@ -287,7 +287,7 @@
   "order": "Order",
   "ordinary_payment": "Payment",
   "other": "Other",
-  "passphrase": "Passphrase",
+  "recovery phrase": "Passphrase",
   "paste_csv_content": "Paste the CSV content here",
   "payload": "Payload",
   "payload_hash": "Payload Hash",
@@ -298,7 +298,7 @@
   "peers": "Peers",
   "pending": "Pending",
   "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
+  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated recovery phrase.",
   "platform": "Platform",
   "poll_creation": "Poll Creation",
   "previous_block": "Previous Block",
@@ -335,7 +335,7 @@
   "search": "Search",
   "search_or_start_message": "Search or start new message",
   "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
+  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure recovery phrase.",
   "select_node": "Select Node",
   "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
   "select_recipients": "Select Recipients",
@@ -423,7 +423,7 @@
   "you_sent_burst": "You sent Signa",
   "your_address": "Your Address",
   "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
+  "your_recovery phrase": "Your Passphrase",
   "youve_got_burst": "You've got Signa",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
@@ -477,7 +477,7 @@
   "select_profile": "Select a User Profile for different dashboards",
   "define_your_salt": "Define your individual Salt",
   "enter_salt": "Enter an arbitrary alphanumeric text",
-  "salt_hint": "In order to increase the security of your passphrase, your own individual text element (salt) is added to the randomly generated word list. This should be a simple short alphanumeric expression, e.g. something personal or randomly generated.",
+  "salt_hint": "In order to increase the security of your recovery phrase, your own individual text element (salt) is added to the randomly generated word list. This should be a simple short alphanumeric expression, e.g. something personal or randomly generated.",
   "salt": "Add Salt",
   "your_new_account": "Your Signum Account",
   "click_to_print": "Click to print",
@@ -529,7 +529,7 @@
   "recipient_required": "Recipient is required",
   "confirm_delete_accounts": "Confirm Removal",
   "confirm_delete_accounts_q": "Are you sure you want to remove these accounts?",
-  "confirm_delete_accounts_hint": "The accounts will be removed only from this application. All your funds are securely stored on the blockchain and you can always re-import removed accounts with your passphrase.",
+  "confirm_delete_accounts_hint": "The accounts will be removed only from this application. All your funds are securely stored on the blockchain and you can always re-import removed accounts with your recovery phrase.",
   "account_successfully_deleted": "Account(s) successfully removed",
   "recipient_validation_hint_burn": "The amount will be burnt",
   "recipient_validation_hint_not_verified": "Address has not been verified.",
@@ -545,5 +545,7 @@
   "confirm": "Confirm",
   "load_all_transactions": "Load All",
   "load_all_transactions_hint": "Loading all transactions eventually causes a lot of requests with high bandwidth usage. Depending on yours and the nodes internet connection and the number of transactions this action can take some time. Once fetched, the transactions are cached locally. Do you really want to load all transactions? (Fetching limit is capped to 10K transactions)",
-  "select_account": "Select"
+  "select_account": "Select",
+  "account_verified": "Account found on network",
+  "account_not_verified": "Account not found on network. Did you choose the correct network? Is it the correct recovery phrase"
 }
