--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -14,7 +14,7 @@
   "accounts": "Contas",
   "actions": "Ações",
   "activate": "Proteger",
-  "activate_hint": "Organize as palavras da frase secreta na ordem correta. Ao fazer isso, você confirma que manteve a frase secreta segura. Lembre-se de que você não poderá controlar sua conta sem a frase secreta.",
+  "activate_hint": "Organize as palavras da frase de recuperação na ordem correta. Ao fazer isso, você confirma que manteve a frase de recuperação segura. Lembre-se de que você não poderá controlar sua conta sem a frase de recuperação.",
   "activate_request_successful": "Proteção de conta solicitada com sucesso. Sua conta será protegida em alguns instantes.",
   "activation_failed": "Falha na proteção:",
   "activation_success": "Proteção solicitada com sucesso. Sua conta será protegida em alguns instantes.",
@@ -162,7 +162,7 @@
   "error_not_enough_funds": "Fundos insuficientes.",
   "error_not_forging": "A conta não está falsificando.",
   "error_not_specified": "__name__ não especificado.",
-  "error_passphrase_required": "A frase secreta é um campo obrigatório.",
+  "error_passphrase_required": "A frase de recuperação é um campo obrigatório.",
   "error_post_only": "Esta solicitação só é aceita usando POST!",
   "error_public_key_already_announced": "A chave pública para esta conta já foi anunciada.",
   "error_public_key_announcement_no_recipient": "O anúncio da chave pública não pode ser anexado a transações sem destinatário.",
@@ -310,7 +310,7 @@
   "search": "Procurar",
   "search_or_start_message": "Pesquise ou comece uma nova mensagem",
   "secure": "Seguro",
-  "seed_password_generator": "Mova o cursor para propagar o gerador de números aleatórios e crie uma frase secreta segura.",
+  "seed_password_generator": "Mova o cursor para propagar o gerador de números aleatórios e crie uma frase de recuperação segura.",
   "select_node": "Selecione o Nó",
   "select_node_description": "Selecione o par com o qual deseja se conectar. Você pode usar um par sugerido, mas também pode inserir um url de par arbitrário.",
   "select_recipients": "Selecione os Destinatários",
