wip: improving the account update stuff

--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -85,7 +85,7 @@
   "click_for_changes": "Click here to see what has changed",
   "click_for_other_platforms": "Click here, if you want another platform",
   "click_here_for_help": "Click here to know more about it",
-  "click_to_copy_recovery phrase": "Click here to copy the recovery phrase into the clipboard",
+  "click_to_copy_passphrase": "Click here to copy the recovery phrase into the clipboard",
   "click_to_refresh": "Click to refresh",
   "click_words": "Click words in correct order",
   "close": "Close",
@@ -93,7 +93,7 @@
   "comma": "Comma",
   "comment": "Comment",
   "complete": "Complete",
-  "confirm_recovery phrase": "Confirm recovery phrase",
+  "confirm_passphrase": "Confirm recovery phrase",
   "confirmations": "Confirmations",
   "confirmed": "Confirmed",
   "console": "Console",
@@ -178,8 +178,9 @@
   "error_not_enough_funds": "Not enough funds.",
   "error_not_forging": "Account is not forging.",
   "error_not_specified": "__name__ not specified.",
-  "error_recovery phrase_required": "Passphrase is a required field.",
+  "error_passphrase_required": "Recovery phrase is a required field.",
   "error_post_only": "This request is only accepted using POST!",
+  "error_storage_quota_exceeded": "Client side storage quota was exceeded. Try removing one or more accounts to free some space.",
   "error_public_key_already_announced": "Public key for this account has already been announced.",
   "error_public_key_announcement_no_recipient": "Public key announcement cannot be attached to transactions with no recipient.",
   "error_public_key_different_account_id": "Announced public key does not match recipient account ID.",
@@ -212,7 +213,7 @@
   "from": "From",
   "full_hash": "Full Hash",
   "generate": "Generate",
-  "generate_recovery phrase": "Generate Passphrase",
+  "generate_passphrase": "Generate Recovery Phrase",
   "generate_qr": "Generate QR",
   "generation_signature": "Generation Signature",
   "generator": "Generator",
@@ -249,8 +250,8 @@
   "marketplace_quantity_change": "Marketplace Quantity Change",
   "marketplace_refund": "Marketplace Refund",
   "marketplace_removal": "Marketplace Removal",
-  "memorize_recovery phrase_help": "Please store this recovery phrase in a secure place. This recovery phrase is needed in order to access your Signum account. ",
-  "memorize_recovery phrase_help_addon": "If you lose the recovery phrase you won't be able to do any transactions, i.e. your coins are lost. The recovery phrase is not recoverable. Keep this recovery phrase secret. Everybody who knows the recovery phrase is de facto the owner of the account.",
+  "memorize_passphrase_help": "Please store this recovery phrase in a secure place. This recovery phrase is needed in order to access your Signum account. ",
+  "memorize_passphrase_help_addon": "If you lose the recovery phrase you won't be able to do any transactions, i.e. your coins are lost. The recovery phrase is not recoverable. Keep this recovery phrase secret. Everybody who knows the recovery phrase is de facto the owner of the account.",
   "message": "Message",
   "message_is_text": "Message is Text?",
   "messages": "Messages",
@@ -287,7 +288,7 @@
   "order": "Order",
   "ordinary_payment": "Payment",
   "other": "Other",
-  "recovery phrase": "Passphrase",
+  "passphrase": "Recovery Phrase",
   "paste_csv_content": "Paste the CSV content here",
   "payload": "Payload",
   "payload_hash": "Payload Hash",
@@ -423,7 +424,7 @@
   "you_sent_burst": "You sent Signa",
   "your_address": "Your Address",
   "your_name": "Your Name",
-  "your_recovery phrase": "Your Passphrase",
+  "your_passphrase": "Your Recovery Phrase",
   "youve_got_burst": "You've got Signa",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
